API - Laufbahnplanung: Übersicht über die Belegprüfungsfehler eines Abiturjahrgangs